crates/core/tests/snapshots/clients__amp_reads_the_namespaced_key_and_not_a_nested_one.snap
---
source: crates/core/tests/clients.rs
expression: read
---
ClientRead {
    servers: {
        "browser": Server {
            enabled: false,
            tags: [],
            calls_per_minute: 0,
            transport: Stdio {
                command: "browser-mcp",
                args: [],
                env: {
                    "BROWSER_PROFILE": "work",
                },
            },
            tools: None,
        },
        "linear": Server {
            enabled: true,
            tags: [],
            calls_per_minute: 0,
            transport: Http {
                url: "https://mcp.linear.app/sse",
                headers_command: [],
                headers: {},
                auth: None,
            },
            tools: None,
        },
        "playwright": Server {
            enabled: true,
            tags: [],
            calls_per_minute: 0,
            transport: Stdio {
                command: "npx",
                args: [
                    "-y",
                    "@playwright/mcp@latest",
                    "--headless",
                ],
                env: {},
            },
            tools: None,
        },
        "sourcegraph": Server {
            enabled: true,
            tags: [],
            calls_per_minute: 0,
            transport: Http {
                url: "${SRC_ENDPOINT}/.api/mcp/v1",
                headers_command: [],
                headers: {
                    "Authorization": "token ${SRC_ACCESS_TOKEN}",
                },
                auth: None,
            },
            tools: None,
        },
    },
    problems: [
        Problem {
            server: Some(
                "husk",
            ),
            message: "has neither `command` nor `url`",
        },
    ],
}
