crates/core/tests/snapshots/clients__codex_reads_toml_entries_and_tolerates_the_evolving_fields.snap
---
source: crates/core/tests/clients.rs
expression: read
---
ClientRead {
    servers: {
        "corp": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.corp.example/mcp",
                headers_command: [
                    "corp-auth",
                    "print-mcp-headers",
                ],
                headers: {},
            },
            tools: None,
        },
        "figma": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.figma.com/mcp",
                headers_command: [],
                headers: {},
            },
            tools: None,
        },
        "github": Server {
            enabled: true,
            tags: [],
            transport: Stdio {
                command: "npx",
                args: [
                    "-y",
                    "@modelcontextprotocol/server-github",
                ],
                env: {
                    "GITHUB_TOKEN": "$GITHUB_TOKEN",
                },
            },
            tools: None,
        },
        "linear": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.linear.app/mcp",
                headers_command: [],
                headers: {
                    "Authorization": "Bearer ${LINEAR_TOKEN}",
                },
            },
            tools: None,
        },
        "notes": Server {
            enabled: false,
            tags: [],
            transport: Stdio {
                command: "notes-mcp",
                args: [],
                env: {},
            },
            tools: None,
        },
    },
    problems: [
        Problem {
            server: Some(
                "figma",
            ),
            message: "codex-managed auth not carried over",
        },
        Problem {
            server: Some(
                "husk",
            ),
            message: "has neither `command` nor `url`",
        },
    ],
}
