crates/core/tests/snapshots/clients__cursor_maps_sse_to_http_with_note_and_honors_disabled.snap
---
source: crates/core/tests/clients.rs
expression: read
---
ClientRead {
    servers: {
        "browser": Server {
            enabled: false,
            tags: [],
            transport: Stdio {
                command: "npx",
                args: [
                    "@browsermcp/mcp@latest",
                ],
                env: {},
            },
            tools: None,
        },
        "linear": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.linear.app/sse",
                headers_command: [],
                headers: {},
            },
            tools: None,
        },
    },
    problems: [
        Problem {
            server: Some(
                "linear",
            ),
            message: "legacy `sse` transport read as http",
        },
    ],
}
