crates/core/tests/snapshots/clients__gemini_reads_both_url_shapes_and_the_excluded_list.snap
---
source: crates/core/tests/clients.rs
expression: read
---
ClientRead {
    servers: {
        "both-urls": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://both.example.com/mcp",
                headers_command: [],
                headers: {},
            },
            tools: None,
        },
        "github": Server {
            enabled: true,
            tags: [],
            transport: Stdio {
                command: "npx",
                args: [
                    "-y",
                    "@modelcontextprotocol/server-github",
                ],
                env: {
                    "GITHUB_TOKEN": "$GITHUB_TOKEN",
                },
            },
            tools: None,
        },
        "legacy-sse": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://sse.example.com/sse",
                headers_command: [],
                headers: {},
            },
            tools: None,
        },
        "linear": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.linear.app/mcp",
                headers_command: [],
                headers: {
                    "Authorization": "Bearer ${LINEAR_TOKEN}",
                },
            },
            tools: None,
        },
        "notes": Server {
            enabled: false,
            tags: [],
            transport: Stdio {
                command: "notes-mcp",
                args: [],
                env: {},
            },
            tools: None,
        },
    },
    problems: [
        Problem {
            server: Some(
                "legacy-sse",
            ),
            message: "legacy `sse` transport read as http",
        },
        Problem {
            server: Some(
                "both-urls",
            ),
            message: "`url` ignored: `httpUrl` takes precedence",
        },
        Problem {
            server: Some(
                "husk",
            ),
            message: "has none of `command`, `httpUrl` or `url`",
        },
    ],
}
