crates/core/tests/snapshots/clients__invalid_json_is_a_file_level_error.snap
---
source: crates/core/tests/clients.rs
expression: err.to_string()
---
invalid Cursor config in x.json
