crates/core/tests/snapshots/clients__opencode_infers_the_type_and_reports_undecidable_entries.snap
---
source: crates/core/tests/clients.rs
expression: read.problems
---
[
    Problem {
        server: Some(
            "both",
        ),
        message: "has both `command` and `url`",
    },
    Problem {
        server: Some(
            "neither",
        ),
        message: "has neither `command` nor `url`",
    },
    Problem {
        server: Some(
            "odd",
        ),
        message: "unknown type \"carrier-pigeon\"",
    },
]
