crates/core/tests/snapshots/clients__opencode_reads_a_commented_file_and_both_entry_types.snap
---
source: crates/core/tests/clients.rs
expression: read
---
ClientRead {
    servers: {
        "figma": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.figma.com/mcp",
                headers_command: [],
                headers: {},
            },
        },
        "github": Server {
            enabled: true,
            tags: [],
            transport: Stdio {
                command: "npx",
                args: [
                    "-y",
                    "@modelcontextprotocol/server-github",
                ],
                env: {
                    "GITHUB_TOKEN": "$GITHUB_TOKEN",
                },
            },
        },
        "linear": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.linear.app/mcp",
                headers_command: [],
                headers: {
                    "Authorization": "Bearer {env:LINEAR_TOKEN}",
                },
            },
        },
        "notes": Server {
            enabled: false,
            tags: [],
            transport: Stdio {
                command: "notes-mcp",
                args: [],
                env: {},
            },
        },
    },
    problems: [
        Problem {
            server: Some(
                "figma",
            ),
            message: "opencode-managed oauth not carried over",
        },
        Problem {
            server: Some(
                "husk",
            ),
            message: "`command` is empty",
        },
    ],
}
