crates/core/tests/snapshots/clients__windsurf_reads_both_remote_spellings.snap
---
source: crates/core/tests/clients.rs
expression: read
---
ClientRead {
    servers: {
        "figma": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.figma.com/mcp",
                headers_command: [],
                headers: {},
            },
        },
        "github": Server {
            enabled: true,
            tags: [],
            transport: Stdio {
                command: "npx",
                args: [
                    "-y",
                    "@modelcontextprotocol/server-github",
                ],
                env: {
                    "GITHUB_TOKEN": "${env:GITHUB_TOKEN}",
                },
            },
        },
        "linear": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.linear.app/mcp",
                headers_command: [],
                headers: {
                    "Authorization": "Bearer ${env:LINEAR_TOKEN}",
                },
            },
        },
        "notes": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://notes.example/mcp",
                headers_command: [],
                headers: {},
            },
        },
    },
    problems: [
        Problem {
            server: Some(
                "notes",
            ),
            message: "`url` ignored: `serverUrl` takes precedence",
        },
        Problem {
            server: Some(
                "husk",
            ),
            message: "has neither `command` nor `url`",
        },
    ],
}
