crates/core/tests/snapshots/clients__zed_reads_context_servers_whatever_their_source.snap
---
source: crates/core/tests/clients.rs
expression: read
---
ClientRead {
    servers: {
        "github": Server {
            enabled: true,
            tags: [],
            transport: Stdio {
                command: "npx",
                args: [
                    "-y",
                    "@modelcontextprotocol/server-github",
                ],
                env: {
                    "GITHUB_TOKEN": "ghp_example",
                },
            },
            tools: None,
        },
        "linear": Server {
            enabled: true,
            tags: [],
            transport: Http {
                url: "https://mcp.linear.app/mcp",
                headers_command: [],
                headers: {
                    "Authorization": "Bearer token",
                },
            },
            tools: None,
        },
        "postgres": Server {
            enabled: true,
            tags: [],
            transport: Stdio {
                command: "postgres-context-server",
                args: [],
                env: {},
            },
            tools: None,
        },
    },
    problems: [
        Problem {
            server: Some(
                "husk",
            ),
            message: "has neither `command` nor `url`",
        },
    ],
}
